--- a/sheet_definitions/face_happy2.json
+++ b/sheet_definitions/face_happy2.json
@@ -14,30 +14,6 @@
     "teen": "head/faces/global/happy2/",
     "pregnant": "head/faces/global/happy2/"
   },
-  "variants": [
-    "light",
-    "amber",
-    "olive",
-    "taupe",
-    "bronze",
-    "brown",
-    "black",
-    "lavender",
-    "blue",
-    "zombie_green",
-    "green",
-    "pale_green",
-    "bright_green",
-    "dark_green",
-    "fur_black",
-    "fur_brown",
-    "fur_tan",
-    "fur_copper",
-    "fur_gold",
-    "fur_grey",
-    "fur_white",
-    "zombie"
-  ],
   "match_body_color": true,
   "animations": [
     "spellcast",
@@ -84,8 +60,21 @@
     "face_happy2"
   ],
   "recolors": {
-    "base": "light",
-    "palette": "body"
+    "color_1": {
+      "type": "body",
+      "palettes": [
+        "ulpc.body",
+        "lpcr.body",
+        "lpcr.all"
+      ]
+    },
+    "color_2": {
+      "type": "eye",
+      "palettes": [
+        "ulpc.eye",
+        "lpcr.eye"
+      ]
+    }
   },
   "type_name": "expression"
 }
